--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,9 @@
-spring.application.name=httpTohttps
-
-server.ssl.key-alias=dummy-alias
-server.ssl.key-password=skeleton
-server.ssl.key-store=classpath:dummy.jks
-server.ssl.key-store-type=JKS
+#spring.application.name=httpTohttps
+#
+#server.ssl.key-alias=dummy-alias
+#server.ssl.key-password=skeleton
+#server.ssl.key-store=classpath:dummy.jks
+#server.ssl.key-store-type=JKS
 
 server.port=5900
+server.servlet.context-path=/springdemo
