--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,5 +5,5 @@
 #server.ssl.key-store=classpath:dummy.jks
 #server.ssl.key-store-type=JKS
 
-server.port=5900
+server.port=${PORT:8080}
 server.servlet.context-path=/springdemo
